1.4
- ownCloud News support
- sync more responsive
- app fully operational during initial sync
- overlay to indicate new articles
- dynamic switch between GMenu in gnome and menu-button elsewhere
- notifications are updated rather than creating new ones every time
- respect notification settings of the DE
- better font-styling on non-elementary distributions
- proper fullscreen mode for videos
- support multiple share accounts of the same kind (e.g. two different pocket accounts)
- fixed memory leaks
- option to ignore unknowns CA

1.2:
- ability to share articles
	- share to readability
	- share to instapaper
	- share to pocket
- improve article-view
- updated UI and animations
- global shortcuts
- article grabber: grabs full articles without ads from website for known sites
- option to use readability instead of article grabber (hidden feature)
- drag article with middle mouse click
- tag and untag articles
- support feeds without category (feedly)
- support feeds with multiple categories (feedly)
- support for themes other than elementary
- basic full text search



1.0:
- Initial Release