@@ -1,17 +1,0 @@
-body: //section[@class='main_cont']/img | //div[@class='articleContent']
-title: //div[@class='blog_top_left']//h2
-author: //a[@class='b'][1]
-date: substring-after(substring-before(//div, 'Posted in'), ' on ')
-strip_image_src: /content/images/globals/
-strip: //h2[. = 'Page 1']/preceding::p
-strip: //h2
-strip: //font
-
-prune: no
-
-single_page_link: concat('http://www.anandtech.com/print/', substring-after(//meta[@property='og:url']/@content, '/show/'))
-next_page_link: //div[@class='article_links']/a[@class='fl-rt']
-
-test_url: http://www.anandtech.com/show/8370/gigabyte-am1m-s2h-review
-test_url: http://www.anandtech.com/show/8402/sandisk-releases-ultra-ii-ssd-the-second-tlc-nand-ssd-in-the-market
-test_url: http://www.anandtech.com/show/8400/arms-cortex-m-even-smaller-and-lower-power-cpu-cores
