@@ -1,14 +1,0 @@
-title://h1
-
-author://span[@class="article-authornames"]/a
-
-body: //div[@class='article-view__content']
-
-replace_string("padding-bottom:): "
-
-
-strip://div[@class='article-view__share-links-top']
-strip://div[@class='adbox-wrapper__label']
-strip://div[@class='adbox-rectangle']
-
-test_url: http://www.computerbase.de/news/2012-06/verbraucherzentrale-mahnt-blizzard-fuer-diablo-3-ab/
