@@ -1,11 +1,0 @@
-tidy: no
-prune: no
-
-title: //section[@id='content']//h1
-date: //span[@class='date']
-author: //span[@class='post-author']/a
-
-body: //div[@class='entry-content']
-
-strip: //div[@id='ts-fab-below']
-strip: //div[@class='sharedaddy sd-sharing-enabled']
